@@ -75,6 +75,11 @@ Release date: TBA
 * Add ``is_sys_guard`` and ``is_typing_guard`` helper functions from astroid
   to ``pylint.checkers.utils``.
 
+* Fix regression on ClassDef inference
+
+  Closes #5030
+  Closes #5036
+
 
 What's New in Pylint 2.11.1?
 ============================
